--- a/meta-key-mapping.yaml
+++ b/meta-key-mapping.yaml
@@ -1,10 +1,14 @@
 1998-gradient-based-learning-applied-to-document-recognition: 1998-lenet5
 2012-imagenet-classification-with-deep-convolutional-neural-networks: 2012-alexnet
+2015-fast-rcnn: 2015-fast-r-cnn
+2015-faster-r-cnn-towards-real-time-object-detection-with-region-proposal-networks: 2015-faster-r-cnn
+2015-faster-rcnn: 2015-faster-r-cnn
 2015-very-deep-convolutional-networks-for-large-scale-image-recognition: 2014-vggnet
 2016-deep-residual-learning-for-image-recognition: 2015-resnet
 2016-ssd: 2016-ssd-net
 2016-ssd-single-shot-multibox-detector: 2016-ssd-net
 2017-attention-is-all-you-need: 2017-transformer
+2017-mask-rcnn: 2017-mask-r-cnn
 2019-bert-pre-training-of-deep-bidirectional-transformers-for-language-understanding: 2019-bert
 2019-character-region-awareness-for-text-detection: 2019-craft-ocr
 2019-craft-character-region-awareness: 2019-craft-ocr
