--- a/ref-meta/123ae35aa7d6838c817072032ce5615bb891652d.yaml
+++ b/ref-meta/123ae35aa7d6838c817072032ce5615bb891652d.yaml
@@ -25,7 +25,7 @@ references:
   meta_key: 2016-neural-networks-with-few-multiplications
   numCitedBy: 280
   pid: 67c191bcce6821f736798cb9b31472bcdd1e52a6
-  show_ref_link: false
+  show_ref_link: true
   title: Neural Networks with Few Multiplications
   year: 2016
 - fieldsOfStudy:
