--- a/ref-meta/42269d0438c0ae4ca892334946ed779999691074.yaml
+++ b/ref-meta/42269d0438c0ae4ca892334946ed779999691074.yaml
@@ -227,7 +227,7 @@ references:
   meta_key: 2008-speeded-up-robust-features-surf
   numCitedBy: 11671
   pid: cdbb606ae47c64049262dfbd3bb147d3f4ba8420
-  show_ref_link: false
+  show_ref_link: true
   title: Speeded-Up Robust Features (SURF)
   year: 2008
 - fieldsOfStudy:
