--- a/ref-meta/59d0d7ccec2db66cad20cac5721ce54a8a058294.yaml
+++ b/ref-meta/59d0d7ccec2db66cad20cac5721ce54a8a058294.yaml
@@ -56,7 +56,7 @@ references:
   meta_key: 2017-quantized-neural-networks-training-neural-networks-with-low-precision-weights-and-activations
   numCitedBy: 1279
   pid: d2e4147eecae6f914e9e1e9aece8fdd2eaed809f
-  show_ref_link: false
+  show_ref_link: true
   title: Quantized Neural Networks - Training Neural Networks with Low Precision Weights and Activations
   year: 2017
 - fieldsOfStudy:
