--- a/ref-meta/7260c0692f8d265e11c4e9c4c8ef4c185bd587ad.yaml
+++ b/ref-meta/7260c0692f8d265e11c4e9c4c8ef4c185bd587ad.yaml
@@ -1054,7 +1054,7 @@ references:
   meta_key: 2013-playing-atari-with-deep-reinforcement-learning
   numCitedBy: 6873
   pid: 2319a491378867c7049b3da055c5df60e1671158
-  show_ref_link: false
+  show_ref_link: true
   title: Playing Atari with Deep Reinforcement Learning
   year: 2013
 - fieldsOfStudy:
