--- a/ref-meta/d418295cd3027c43eccc5592ae5b8303ba8192be.yaml
+++ b/ref-meta/d418295cd3027c43eccc5592ae5b8303ba8192be.yaml
@@ -19,7 +19,7 @@ references:
   meta_key: 2017-quantized-neural-networks-training-neural-networks-with-low-precision-weights-and-activations
   numCitedBy: 1279
   pid: d2e4147eecae6f914e9e1e9aece8fdd2eaed809f
-  show_ref_link: false
+  show_ref_link: true
   title: Quantized Neural Networks - Training Neural Networks with Low Precision Weights and Activations
   year: 2017
 - fieldsOfStudy:
@@ -67,7 +67,7 @@ references:
   meta_key: 2016-neural-networks-with-few-multiplications
   numCitedBy: 280
   pid: 67c191bcce6821f736798cb9b31472bcdd1e52a6
-  show_ref_link: false
+  show_ref_link: true
   title: Neural Networks with Few Multiplications
   year: 2016
 - fieldsOfStudy:
