--- a/meta-key-mapping.yaml
+++ b/meta-key-mapping.yaml
@@ -3,15 +3,18 @@
 2015-fast-rcnn: 2015-fast-r-cnn
 2015-faster-r-cnn-towards-real-time-object-detection-with-region-proposal-networks: 2015-faster-r-cnn
 2015-faster-rcnn: 2015-faster-r-cnn
+2015-mxnet-a-flexible-and-efficient-machine-learning-library-for-heterogeneous-distributed-systems: 2015-mxnet
 2015-very-deep-convolutional-networks-for-large-scale-image-recognition: 2014-vggnet
 2016-deep-residual-learning-for-image-recognition: 2015-resnet
 2016-ssd: 2016-ssd-net
 2016-ssd-single-shot-multibox-detector: 2016-ssd-net
+2016-tensorflow-a-system-for-large-scale-machine-learning: 2016-tensorflow
 2017-attention-is-all-you-need: 2017-transformer
 2017-feature-pyramid-networks-for-object-detection: 2017-fpn-detection
 2017-fpn: 2017-fpn-detection
 2017-mask-rcnn: 2017-mask-r-cnn
 2018-tvm-an-automated-end-to-end-optimizing-compiler-for-deep-learning: 2018-tvm
+2018-tvm-end-to-end-optimization-stack-for-deep-learning: 2018-tvm-stack
 2019-bert-pre-training-of-deep-bidirectional-transformers-for-language-understanding: 2019-bert
 2019-character-region-awareness-for-text-detection: 2019-craft-ocr
 2019-craft-character-region-awareness: 2019-craft-ocr
