--- a/ref-meta/728744423ff0fb7e327664ed4e6352a95bb6c893.yaml
+++ b/ref-meta/728744423ff0fb7e327664ed4e6352a95bb6c893.yaml
@@ -372,7 +372,7 @@ references:
   meta_key: 2001-the-elements-of-statistical-learning
   numCitedBy: 12272
   pid: 44d71e0ec9f68d8eb802b9ab1dde8368efeac42e
-  show_ref_link: false
+  show_ref_link: true
   title: The Elements of Statistical Learning
   year: 2001
 - fieldsOfStudy:
