--- a/ref-meta/bb66ae5f36bc84243979c522d8e3f93539cb6a9f.yaml
+++ b/ref-meta/bb66ae5f36bc84243979c522d8e3f93539cb6a9f.yaml
@@ -4,14 +4,14 @@ badges: []
 corpusId: 60977545
 fieldsOfStudy:
 - Computer Science
-meta_key: 2004-ieee-transactions-on-pattern-analysis-and-machine-intelligence
-numCitedBy: 3695
+meta_key: 2022-ieee-transactions-on-pattern-analysis-and-machine-intelligence-publication-information
+numCitedBy: 3230
 numCiting: 0
 paperAbstract: ''
 ref_count: 0
 references: []
 slug: IEEE-Transactions-on-Pattern-Analysis-and-Machine-Fu
-title: IEEE Transactions on Pattern Analysis and Machine Intelligence
+title: IEEE Transactions on Pattern Analysis and Machine Intelligence Publication Information
 url: https://www.semanticscholar.org/paper/IEEE-Transactions-on-Pattern-Analysis-and-Machine-Fu/bb66ae5f36bc84243979c522d8e3f93539cb6a9f?sort=total-citations
-venue: ''
-year: 2004
+venue: IEEE Transactions on Pattern Analysis and Machine Intelligence
+year: 2022
