--- a/ref-meta/ee7b883e35d754ae4f71c21bb71f9f03e4ffbb2c.yaml
+++ b/ref-meta/ee7b883e35d754ae4f71c21bb71f9f03e4ffbb2c.yaml
@@ -236,7 +236,7 @@ references:
   meta_key: 2017-a-structured-self-attentive-sentence-embedding
   numCitedBy: 1516
   pid: 204a4a70428f3938d2c538a4d74c7ae0416306d8
-  show_ref_link: false
+  show_ref_link: true
   title: A Structured Self-attentive Sentence Embedding
   year: 2017
 - fieldsOfStudy:
