--- a/ref-meta/3cfb319689f06bf04c2e28399361f414ca32c4b3.yaml
+++ b/ref-meta/3cfb319689f06bf04c2e28399361f414ca32c4b3.yaml
@@ -649,7 +649,7 @@ references:
   meta_key: 2016-long-short-term-memory-networks-for-machine-reading
   numCitedBy: 771
   pid: 13fe71da009484f240c46f14d9330e932f8de210
-  show_ref_link: false
+  show_ref_link: true
   title: Long Short-Term Memory-Networks for Machine Reading
   year: 2016
 - fieldsOfStudy:
