--- a/ref-meta/c08f5fa876181fc040d76c75fe2433eee3c9b001.yaml
+++ b/ref-meta/c08f5fa876181fc040d76c75fe2433eee3c9b001.yaml
@@ -339,7 +339,7 @@ references:
   meta_key: 2010-a-survey-on-transfer-learning
   numCitedBy: 13590
   pid: a25fbcbbae1e8f79c4360d26aa11a3abf1a11972
-  show_ref_link: false
+  show_ref_link: true
   title: A Survey on Transfer Learning
   year: 2010
 - fieldsOfStudy:
